# scmrights-thingy

./: Cargo.toml  README.rst
src/: chat.rs  ipc.rs  lineio.rs  main.rs
